--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=user
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
+spring.h2.console.enabled=disabled
+spring.h2.console.settings.web-allow-others=false
 
 application.language=tur
